feat: space 매핑 관련 코드 수정